--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,7 @@ select,
 span {
   font-family: "TUIType-Regular", Arial, Verdana, sans-serif;
   color: var(--blue-dark-color);
+  overflow-y: hidden;
 }
 
 button {
@@ -237,6 +238,11 @@ button {
   color: var(--white-color);
   border-radius: 10px;
   cursor: pointer;
+  overflow-y: hidden;
+}
+
+ul, li {
+  list-style: none;
 }
 
 a {
@@ -321,10 +327,15 @@ select {
   width: 100%;
   height: 50px;
   padding: 10px;
+  font-size: 0.9rem;
   background-color: var(--white-color);
   border: 2px solid var(--gray-light-color);
   border-radius: 10px;
   outline: none;
+}
+input[type=text]:focus,
+select:focus {
+  border-color: var(--gray-color);
 }
 
 input[type=checkbox]:checked {
@@ -367,9 +378,21 @@ button .material-symbols-outlined {
   justify-content: center;
   align-items: center;
 }
+#searching .vakantietypes ul .arrow {
+  transition: all ease 0.3s;
+}
+#searching .vakantietypes ul .arrow:first-child:hover {
+  transform: translateX(-3px);
+}
+#searching .vakantietypes ul .arrow:hover {
+  transform: translateX(3px);
+}
 #searching .vakantietypes li {
   display: inline-block;
   margin: 0rem 1rem;
+}
+#searching .vakantietypes li:hover, #searching .vakantietypes li:hover a, #searching .vakantietypes li:hover span {
+  color: var(--blue-color);
 }
 #searching .vakantietypes li a:hover {
   text-decoration: none;
@@ -380,6 +403,9 @@ button .material-symbols-outlined {
 #searching .vakantietypes li .number {
   font-size: 12px;
   color: var(--gray-color);
+}
+#searching .vakantietypes li, #searching .vakantietypes li a, #searching .vakantietypes li span {
+  transition: all ease 0.3s;
 }
 #searching .vakantietypes span {
   display: block;
@@ -403,6 +429,7 @@ button .material-symbols-outlined {
   margin: auto;
   position: relative;
   margin-top: 3rem;
+  padding: 1rem;
 }
 #resultaten ul.breadcrumbs {
   display: inline-flex;
@@ -457,6 +484,9 @@ button .material-symbols-outlined {
   border-radius: 10px;
   outline: none;
   margin-bottom: 1rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 #resultaten .filters article .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -483,7 +513,7 @@ button .material-symbols-outlined {
 #resultaten .filters article .slider-labels span {
   flex: 1;
   text-align: center;
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-family: "TUIType-Bold";
 }
 #resultaten .filters article .max-price {
@@ -492,6 +522,9 @@ button .material-symbols-outlined {
 #resultaten .filters article .max-price select {
   font-size: 1rem;
   margin-bottom: 1rem;
+}
+#resultaten .filters article .max-price select option:checked {
+  font-family: "TUIType-Bold";
 }
 #resultaten .filters article .checkboxes {
   display: grid;
@@ -609,14 +642,27 @@ button .material-symbols-outlined {
   margin-right: 10px;
   font-size: 2rem;
 }
-#resultaten .vakantie-resultaten article .overlay-image span.circle {
+#resultaten .vakantie-resultaten article .overlay-image .circles {
+  width: 100%;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
   position: absolute;
-  bottom: 10px;
-  left: 50%;
+  bottom: 1rem;
+}
+#resultaten .vakantie-resultaten article .overlay-image .circles .circle {
+  bottom: 0;
   color: var(--white-color);
   font-size: 1.2rem;
+  display: inline-block;
+  margin: 0 5px;
+}
+#resultaten .vakantie-resultaten article .overlay-image .circles .circle:first-child {
+  color: var(--blue-color);
 }
 #resultaten .vakantie-resultaten article img {
+  width: 100%;
   height: 325px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -630,15 +676,24 @@ button .material-symbols-outlined {
 }
 #resultaten .vakantie-resultaten article ul {
   padding: 1rem;
-  margin-top: 2rem;
+  margin-top: 1.1rem;
   background-color: var(--gray-light-color);
 }
 #resultaten .vakantie-resultaten article ul li {
-  font-family: "Ambit-Bold";
+  font-family: "Ambit-Regular";
   padding: 0.2rem 0rem;
+  color: var(--blue-dark-color);
+  display: flex;
+  align-items: center;
 }
 #resultaten .vakantie-resultaten article ul li span {
-  font-family: "Ambit-Regular";
+  font-family: "TUIType-Regular";
+  margin-left: 7px;
+}
+#resultaten .vakantie-resultaten article ul li .material-symbols-outlined {
+  font-family: "Material Symbols Outlined";
+  margin-right: 10px;
+  margin-left: 0px;
 }
 #resultaten .vakantie-resultaten article button {
   width: 100%;
@@ -650,6 +705,13 @@ button .material-symbols-outlined {
 }
 #resultaten .vakantie-resultaten article .information {
   padding: 1rem;
+}
+#resultaten .vakantie-resultaten article .place {
+  font-size: 14px;
+  margin-bottom: 1rem;
+}
+#resultaten .vakantie-resultaten article .place span {
+  color: var(--gray-color);
 }
 #resultaten .vakantie-resultaten article span.price {
   font-size: 1.7rem;
@@ -669,6 +731,16 @@ button .material-symbols-outlined {
   font-size: 1rem;
   content: "/10";
 }
+#resultaten .vakantie-resultaten article .thumb {
+  margin-right: 1rem;
+}
 #resultaten .vakantie-resultaten article .star {
+  color: var(--yellow-color);
   margin-right: 0rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .filters {
+    display: block;
+  }
 }/*# sourceMappingURL=style.css.map */
