--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,7 @@ select,
 span {
     font-family: 'TUIType-Regular', Arial, Verdana, sans-serif;
     color: var(--blue-dark-color);
+    overflow-y: hidden;
 }
 
 button {
@@ -47,6 +48,11 @@ button {
     color: var(--white-color);
     border-radius: 10px;
     cursor: pointer;
+    overflow-y: hidden;
+}
+
+ul, li {
+    list-style: none;
 }
 
 a {
@@ -141,11 +147,16 @@ select {
     width: 100%;
     height: 50px;
     padding: 10px;
+    font-size: 0.9rem;
 
     background-color: var(--white-color);
     border: 2px solid var(--gray-light-color);
     border-radius: 10px;
     outline: none;
+
+    &:focus {
+        border-color: var(--gray-color);
+    }
 }
 
 input[type="checkbox"]:checked {
@@ -188,18 +199,33 @@ button {
     background-color: var(--white-color);
     margin-top: 1rem;
 
-
     ul {
         display: flex;
         justify-content: center;
         align-items: center;
+
+        .arrow {
+            transition: all ease 0.3s;
+
+            &:first-child:hover {
+                transform: translateX(-3px);
+            }
+
+            &:hover {
+                transform: translateX(3px);
+            }
+        }
     }
 
     li {
         display: inline-block;
         margin: 0rem 1rem;
 
-        & a:hover {
+        &:hover, &:hover a, &:hover span {
+            color: var(--blue-color);
+        }
+
+        a:hover {
             text-decoration: none;
         }
 
@@ -211,6 +237,10 @@ button {
             font-size: 12px;
             color: var(--gray-color);
         }
+    }
+
+    li, li a, li span {
+        transition: all ease 0.3s;
     }
 
     span {
@@ -239,6 +269,7 @@ button {
     margin: auto;
     position: relative;
     margin-top: 3rem;
+    padding: 1rem;
 
     ul.breadcrumbs {
         display: inline-flex;
@@ -271,6 +302,7 @@ button {
 
     .filters {
         width: 400px;
+        // display: none;
 
         article {
             background-color: var(--gray-light-color);
@@ -304,6 +336,10 @@ button {
                 border-radius: 10px;
                 outline: none;
                 margin-bottom: 1rem;
+
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
             }
 
             .slider::-webkit-slider-thumb {
@@ -336,7 +372,7 @@ button {
             .slider-labels span {
                 flex: 1;
                 text-align: center;
-                font-size: 0.8rem;
+                font-size: 1rem;
                 font-family: 'TUIType-Bold';
             }
 
@@ -346,6 +382,10 @@ button {
                 select {
                     font-size: 1rem;
                     margin-bottom: 1rem;
+
+                    option:checked {
+                        font-family: 'TUIType-Bold';
+                    }
                 }
             }
 
@@ -488,16 +528,32 @@ button {
                     font-size: 2rem;
                 }
 
-                span.circle {
+                .circles {
+                    width: 100%;
+                    height: 2rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: flex-end;
+
                     position: absolute;
-                    bottom: 10px;
-                    left: 50%;
-                    color: var(--white-color);
-                    font-size: 1.2rem;
+                    bottom: 1rem;
+
+                    .circle {
+                        bottom: 0;
+                        color: var(--white-color);
+                        font-size: 1.2rem;
+                        display: inline-block;
+                        margin: 0 5px;
+
+                        &:first-child {
+                            color: var(--blue-color);
+                        }
+                    }
                 }
             }
 
             img {
+                width: 100%;
                 height: 325px;
                 object-fit: cover;
             }
@@ -513,15 +569,25 @@ button {
 
             ul {
                 padding: 1rem;
-                margin-top: 2rem;
+                margin-top: 1.1rem;
                 background-color: var(--gray-light-color);
 
                 li {
-                    font-family: 'Ambit-Bold';
+                    font-family: 'Ambit-Regular';
                     padding: 0.2rem 0rem;
+                    color: var(--blue-dark-color);
+                    display: flex;
+                    align-items: center;
 
                     span {
-                        font-family: 'Ambit-Regular';
+                        font-family: 'TUIType-Regular';
+                        margin-left: 7px;
+                    }
+
+                    .material-symbols-outlined {
+                        font-family: 'Material Symbols Outlined';
+                        margin-right: 10px;
+                        margin-left: 0px;
                     }
                 }
             }
@@ -538,6 +604,15 @@ button {
 
             .information {
                 padding: 1rem;
+            }
+
+            .place {
+                font-size: 14px;
+                margin-bottom: 1rem;
+
+                span {
+                    color: var(--gray-color);
+                }
             }
 
             span.price {
@@ -562,10 +637,21 @@ button {
                 }
             }
 
+            .thumb {
+                margin-right: 1rem;
+            }
+
             .star {
+                color: var(--yellow-color);
                 margin-right: 0rem;
             }
 
         }
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .filters {
+      display: block;
     }
 }
